Bug 353915: Deleting attachments from messages crashes SM.  r+sr=bienvenu